# testpilot

./: .gitignore  .project-policy.yml  0401.xlsx  0414-handover.md  6G-STA-exp.md  AGENTS.md  CHANGELOG.md  DESIGN.md  GEMINI.md  README.md  compare-0401.json  compare-0401.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
configs/: testbed.yaml.example
docs/: audit-todo.md  enhance-plan-v1.md  plan.md  plugin-dev-guide.md  release-flow.md  spec.md  todos.md  wifi-baseline-exp.md
scripts/: check_release_version.py  compare_0401_answers.py  compare_wifi_llapi_runs.py  gen_cases.py  install.sh  policy_cli_help.sh  wifi_llapi_build_template_report.py
tests/: test_advisory.py  test_agent_roles.py  test_agent_runtime.py  test_azure_auth.py  test_boundary_control_verdict.py  test_case_schema.py  test_cli.py  test_cli_doc_alignment.py  test_hook_policy.py  test_html_reporter.py  test_installer.py  test_log_capture.py  test_mcp_config.py  test_orchestrator_per_case_agent.py  test_orchestrator_realistic_runtime.py  test_orchestrator_serialwrap_logs.py  test_plugin_base_contract.py  test_plugin_base_slim.py  test_plugin_loader.py  test_plugin_reporter.py  test_predispatch.py  test_release_governance.py  test_remediation.py  test_reporter.py  test_serialwrap_binary.py  test_skill_registry.py  test_testpilot_normal_test_skill.py  test_transport_factory.py  test_transport_serialwrap.py  test_verify_install.py  test_version_metadata.py  test_wifi_llapi_artifacts.py  test_wifi_llapi_compare_0401.py  test_wifi_llapi_excel.py  test_wifi_llapi_summary.py  (+3 more)
(+1162 files in other folders)
